--- a/contraCheque/WebContent/Inicial.xhtml
+++ b/contraCheque/WebContent/Inicial.xhtml
@@ -26,9 +26,10 @@
 			<h:form>
 				<p:steps activeIndex="0" styleClass="custom" readonly="false">
 					<p:menuitem value="Início" url="Inicial.jsf" />
-					<p:menuitem value="Enviar EXPORTA" url="Passo1.jsf" />
-					<p:menuitem value="Gerar PDFs" url="Passo2.jsf" />
-					<p:menuitem value="Visitar Site" url="Passo3.jsf" />
+					<p:menuitem value="Enviar EXPORTA" url="Passo2.jsf" />
+					<p:menuitem value="Mensagem" url="Passo3.jsf" />
+					<p:menuitem value="Gerar PDFs" url="Passo4.jsf" />
+					<p:menuitem value="Visitar Site" url="Passo5.jsf" />
 				</p:steps>
 			</h:form>
 		</div>
