--- a/contraCheque/WebContent/Passo2.xhtml
+++ b/contraCheque/WebContent/Passo2.xhtml
@@ -22,74 +22,27 @@
 		</div>
 		<div id="menu">
 			<h:form>
-				<p:steps activeIndex="2" styleClass="custom" readonly="false">
+				<p:steps activeIndex="1" styleClass="custom" readonly="false">
 					<p:menuitem value="Início" url="Inicial.jsf" />
-					<p:menuitem value="Enviar EXPORTA" url="Passo1.jsf" />
-					<p:menuitem value="Gerar PDFs" url="Passo2.jsf" />
-					<p:menuitem value="Visitar Site" url="Passo3.jsf" />
+					<p:menuitem value="Enviar EXPORTA" url="Passo2.jsf" />
+					<p:menuitem value="Mensagem" url="Passo3.jsf" />
+					<p:menuitem value="Gerar PDFs" url="Passo4.jsf" />
+					<p:menuitem value="Visitar Site" url="Passo5.jsf" />
 				</p:steps>
 			</h:form>
 		</div>
 
 		<div id="centro">
-			<h:form>
-				<h3>Mensagem</h3>
-				<p:inputTextarea rows="6" cols="33"/>
-				<p:commandButton value="Salvar Mensagem" id="ajax5"	actionListener="#{arquivosMB.salvarMensagem}" />
+			
+			<h:form enctype="multipart/form-data">
+				<p:fileUpload fileUploadListener="#{fileUploadMB.doUpload}"
+					showButtons="false" label="Anexar EXPORTA.TXT" auto="true" />
 			</h:form>
-			<h:form>
-				<p:growl id="growl" life="2000" />
-
-				<p:ajaxStatus style="display:block;margin-bottom:2em;height:24px;">
-					<f:facet name="default1">
-						<h:outputText value="Status: StandBy" />
-					</f:facet>
-					<f:facet name="start1">
-						<p:graphicImage name="images/ajaxloadingbar.gif" />
-					</f:facet>
-					<f:facet name="complete1">
-						<h:outputText value="Status: Completed" />
-					</f:facet>
-				</p:ajaxStatus>
-				<p:ajaxStatus onstart="PF('statusDialog').show()"
-					onsuccess="PF('statusDialog').hide()" />
-				<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-					closable="false" resizable="false" showHeader="false">
-					<p:graphicImage name="images/ajaxloadingbar.gif" />
-				</p:dialog>
-
-				<p:commandButton value="Gerar PDFs" id="ajax1"
-					actionListener="#{arquivosMB.gerarPDF}" icon="ui-icon-refresh" />
-
-
-				<p:ajaxStatus style="display:block;margin-bottom:2em;height:24px;">
-					<f:facet name="default">
-						<h:outputText value="Status: StandBy" />
-					</f:facet>
-					<f:facet name="start">
-						<p:graphicImage name="images/ajaxloadingbar.gif" />
-					</f:facet>
-					<f:facet name="complete">
-						<h:outputText value="Status: Completed" />
-					</f:facet>
-				</p:ajaxStatus>
-				<p:ajaxStatus onstart="PF('statusDialog').show()"
-					onsuccess="PF('statusDialog').hide()" />
-				<p:dialog widgetVar="statusDialog" modal="true" draggable="false"
-					closable="false" resizable="false" showHeader="false">
-					<p:graphicImage name="images/ajaxloadingbar.gif" />
-				</p:dialog>
-
-				<p:commandButton value="Gerar e Publicar PDFs" id="ajax2"
-					actionListener="#{arquivosMB.gerarEPublicarPDF}"
-					icon="ui-icon-refresh" />
-			</h:form>
+			<h3>*Diretório padrão \\Servidor\rh\CCS\temp</h3>
 			<h:form>
 				<p:messages severity="info" escape="false" showDetail="true"
 					autoUpdate="true" closable="true" />
 			</h:form>
-
-
 
 		</div>
 
