MENSAGEM SENDO FIXED

--- a/contraCheque/WebContent/Passo3.xhtml
+++ b/contraCheque/WebContent/Passo3.xhtml
@@ -35,7 +35,7 @@
 		<div id="centro">
 			<h:form>
 				<h3>Mensagem</h3>
-				<p:inputTextarea rows="6" cols="33" value="#{arquivosMB.f2.mensagem}"/>
+				<p:inputTextarea rows="6" cols="33" value="#{arquivosMB.m.msg}"/>
 				<p:commandButton value="Salvar Mensagem" id="ajax5"	actionListener="#{arquivosMB.salvarMensagem}" />
 			</h:form>
 			<h:form>
